spacing fix between form elements

--- a/web/themes/custom/myusf/sass/src/partials/_navigation.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_navigation.scss
@@ -1327,12 +1327,19 @@ button.navbar-toggler.navbar-toggler-right.collapsed{
 	}
 
 	#block-exposedformevents-searchpage-1 fieldset#edit-field-category--wrapper {
-		    margin-top: 10px;
-		    margin-bottom: 30px!important;
+		margin-bottom: 15px;
+		
+		legend {
+			margin-bottom: 5px;
 		}
-		#block-exposedformevents-searchpage-1 fieldset#edit-field-target--wrapper {
-		    margin-bottom: 30px!important;
+	}
+	#block-exposedformevents-searchpage-1 fieldset#edit-field-target--wrapper {
+		margin-bottom: 25px;
+		
+		legend {
+			margin-bottom: 5px;
 		}
+	}
 
 	.block-views-blockannouncements-most-recent-list-block-1 .custom-block2 {
 		@include media-breakpoint-only(landscape_phone) {
@@ -1348,8 +1355,11 @@ button.navbar-toggler.navbar-toggler-right.collapsed{
 	    display: inline-block;
 	    content: "";
 	    top: 68px;
-	}	
-	
+	}
+	input#edit-search-api-fulltext::placeholder {
+		text-transform: uppercase;
+		font-size: .8em;
+	}		
 }
 
 .page-node-140134 #sidebar_second {
